infra/k8s/overlays/staging/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atina-saas
spec:
  replicas: 1
