infra/k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atina-saas
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api-staging.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-atina-saas
                port:
                  number: 80
    - host: nest-staging.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-nest-api
                port:
                  number: 80
    - host: app-staging.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-omnigroup-web
                port:
                  number: 80
